# airtable-client

./: .gitignore  .hatchignore  README.md  pyproject.toml
src/airtable_client/: __init__.py
tests/: conftest.py  test_airtable_client.py  test_list_fields.py  test_list_records.py
