[project]
name = "airtable-client"
version = "0.1.0"
description = "A Python client for the Airtable API"
authors = [{ name = "Alan Hettinger", email = "alan@balancer.team" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests>=2.31.0"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/balancer-team/airtable-client"
Repository = "https://github.com/balancer-team/airtable-client"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
